--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nuxt": "^3.0.0-rc.4",
     "pinia": "^2.0.14",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@fontsource/jost": "^4.5.10"
   }
 }
