--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iconify-json/twemoji": "^1.1.5",
     "@nuxtjs/color-mode": "^3.1.4",
     "@pinia/nuxt": "^0.1.9",
+    "eslint-config-prettier": "^8.5.0",
     "@unocss/nuxt": "^0.43.2",
     "@vueuse/nuxt": "^8.8.0",
     "eslint": "^8.19.0",
