--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@fontsource/jost": "^4.5.10",
     "@popperjs/core": "^2.11.5",
+    "@supabase/supabase-js": "^1.35.4",
+    "ohmyfetch": "^0.4.18",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
@@ -18,10 +20,10 @@
     "@iconify-json/twemoji": "^1.1.5",
     "@nuxtjs/color-mode": "^3.1.4",
     "@pinia/nuxt": "^0.1.9",
-    "eslint-config-prettier": "^8.5.0",
     "@unocss/nuxt": "^0.43.2",
     "@vueuse/nuxt": "^8.8.0",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
     "nuxt": "^3.0.0-rc.4",
     "pinia": "^2.0.14",
     "typescript": "^4.7.4"
