--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/jost": "^4.5.10",
     "@popperjs/core": "^2.11.5",
     "@supabase/supabase-js": "^1.35.4",
+    "lodash": "^4.17.21",
     "ohmyfetch": "^0.4.18",
     "prettier": "^2.7.1"
   },
@@ -20,6 +21,7 @@
     "@iconify-json/twemoji": "^1.1.5",
     "@nuxtjs/color-mode": "^3.1.4",
     "@pinia/nuxt": "^0.1.9",
+    "@types/lodash": "^4.14.184",
     "@unocss/nuxt": "^0.43.2",
     "@vueuse/nuxt": "^8.8.0",
     "eslint": "^8.19.0",
